# Eigene_Funktionen_Leistungskurve_II

./: .gitignore  README.md  functions.py  main.py  pyproject.toml
data/: numpy_array.npy
