[project]
name = "eigene_funktionen_leistungskurve_II"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MaierElias, MayrJulius", email = "me7770@mci4me.at"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
